// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /user/name/:username/post endpoint Success (follower) 1`] = `
[
  {
    "author": {
      "id": "675351d698452e4fadc376c1",
      "name": "hello you",
      "profilePicPath": null,
      "username": "follower",
    },
    "content": "Me too!",
    "createdDate": "",
    "id": "675351d698452e4fadc376c4",
    "numDislikes": 0,
    "numLikes": 0,
    "replyTo": {
      "author": {
        "id": "675351d698452e4fadc376be",
        "name": "hi there",
        "profilePicPath": null,
        "username": "username",
      },
      "content": "I like dogs.",
      "createdDate": "",
      "id": "675351d698452e4fadc376c3",
    },
    "userInteraction": "",
  },
]
`;

exports[`GET /user/name/:username/post endpoint Success 1`] = `
[
  {
    "author": {
      "id": "675351d698452e4fadc376be",
      "name": "hi there",
      "profilePicPath": null,
      "username": "username",
    },
    "content": "I like dogs.",
    "createdDate": "",
    "id": "675351d698452e4fadc376c3",
    "numDislikes": 0,
    "numLikes": 0,
    "userInteraction": "",
  },
]
`;
